antlr_gen/decafParser.py
# Generated from ../decaf.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class decafParser ( Parser ):

    grammarFileName = "decaf.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'Program'", "'{'", "'}'", 
                     "';'", "'['", "']'", "'struct'", "'int'", "'char'", 
                     "'boolean'", "'void'", "'('", "')'", "'if'", "'else'", 
                     "'while'", "'return'", "'='", "'.'", "'-'", "'!'", 
                     "'*'", "'/'", "'%'", "'+'", "'<'", "'>'", "'<='", "'>='", 
                     "'=='", "'!='", "'&&'", "'||'", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "NUM", "ID", "CHAR", "BLANK" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_varDeclaration = 2
    RULE_structDeclaration = 3
    RULE_varType = 4
    RULE_methoDeclaration = 5
    RULE_methodType = 6
    RULE_parameter = 7
    RULE_parametertype = 8
    RULE_block = 9
    RULE_statement = 10
    RULE_location = 11
    RULE_expression = 12
    RULE_methodCall = 13
    RULE_arg = 14
    RULE_p_arith_op = 15
    RULE_arith_op = 16
    RULE_rel_op = 17
    RULE_eq_op = 18
    RULE_cond_op = 19
    RULE_literal = 20
    RULE_int_Literal = 21
    RULE_char_Literal = 22
    RULE_bool_Literal = 23

    ruleNames =  [ "program", "declaration", "varDeclaration", "structDeclaration", 
                   "varType", "methoDeclaration", "methodType", "parameter", 
                   "parametertype", "block", "statement", "location", "expression", 
                   "methodCall", "arg", "p_arith_op", "arith_op", "rel_op", 
                   "eq_op", "cond_op", "literal", "int_Literal", "char_Literal", 
                   "bool_Literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    NUM=37
    ID=38
    CHAR=39
    BLANK=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(decafParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(decafParser.DeclarationContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = decafParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(decafParser.T__0)
            self.state = 49
            self.match(decafParser.T__1)
            self.state = 50
            self.match(decafParser.T__2)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__7) | (1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0):
                self.state = 51
                self.declaration()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(decafParser.T__3)
            self.state = 58
            self.match(decafParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def structDeclaration(self):
            return self.getTypedRuleContext(decafParser.StructDeclarationContext,0)


        def varDeclaration(self):
            return self.getTypedRuleContext(decafParser.VarDeclarationContext,0)


        def methoDeclaration(self):
            return self.getTypedRuleContext(decafParser.MethoDeclarationContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = decafParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 63
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.structDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 61
                self.varDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.methoDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varType(self):
            return self.getTypedRuleContext(decafParser.VarTypeContext,0)


        def ID(self):
            return self.getToken(decafParser.ID, 0)

        def NUM(self):
            return self.getToken(decafParser.NUM, 0)

        def getRuleIndex(self):
            return decafParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):

        localctx = decafParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_varDeclaration)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 65
                self.varType()
                self.state = 66
                self.match(decafParser.ID)
                self.state = 67
                self.match(decafParser.T__4)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 69
                self.varType()
                self.state = 70
                self.match(decafParser.ID)
                self.state = 71
                self.match(decafParser.T__5)
                self.state = 72
                self.match(decafParser.NUM)
                self.state = 73
                self.match(decafParser.T__6)
                self.state = 74
                self.match(decafParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StructDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(decafParser.ID, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(decafParser.VarDeclarationContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_structDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclaration" ):
                listener.enterStructDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclaration" ):
                listener.exitStructDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDeclaration" ):
                return visitor.visitStructDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def structDeclaration(self):

        localctx = decafParser.StructDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(decafParser.T__7)
            self.state = 79
            self.match(decafParser.ID)
            self.state = 80
            self.match(decafParser.T__2)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__7) | (1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0):
                self.state = 81
                self.varDeclaration()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(decafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(decafParser.ID, 0)

        def structDeclaration(self):
            return self.getTypedRuleContext(decafParser.StructDeclarationContext,0)


        def getRuleIndex(self):
            return decafParser.RULE_varType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarType" ):
                listener.enterVarType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarType" ):
                listener.exitVarType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarType" ):
                return visitor.visitVarType(self)
            else:
                return visitor.visitChildren(self)




    def varType(self):

        localctx = decafParser.VarTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_varType)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(decafParser.T__8)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(decafParser.T__9)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.match(decafParser.T__10)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 92
                self.match(decafParser.T__7)
                self.state = 93
                self.match(decafParser.ID)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.structDeclaration()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.match(decafParser.T__11)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethoDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodType(self):
            return self.getTypedRuleContext(decafParser.MethodTypeContext,0)


        def ID(self):
            return self.getToken(decafParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(decafParser.BlockContext,0)


        def parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.ParameterContext)
            else:
                return self.getTypedRuleContext(decafParser.ParameterContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_methoDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethoDeclaration" ):
                listener.enterMethoDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethoDeclaration" ):
                listener.exitMethoDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethoDeclaration" ):
                return visitor.visitMethoDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methoDeclaration(self):

        localctx = decafParser.MethoDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methoDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.methodType()
            self.state = 99
            self.match(decafParser.ID)
            self.state = 100
            self.match(decafParser.T__12)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10))) != 0):
                self.state = 101
                self.parameter()
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(decafParser.T__13)
            self.state = 108
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return decafParser.RULE_methodType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodType" ):
                listener.enterMethodType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodType" ):
                listener.exitMethodType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodType" ):
                return visitor.visitMethodType(self)
            else:
                return visitor.visitChildren(self)




    def methodType(self):

        localctx = decafParser.MethodTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametertype(self):
            return self.getTypedRuleContext(decafParser.ParametertypeContext,0)


        def ID(self):
            return self.getToken(decafParser.ID, 0)

        def getRuleIndex(self):
            return decafParser.RULE_parameter

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameter" ):
                listener.enterParameter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameter" ):
                listener.exitParameter(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter" ):
                return visitor.visitParameter(self)
            else:
                return visitor.visitChildren(self)




    def parameter(self):

        localctx = decafParser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.parametertype()
                self.state = 113
                self.match(decafParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.parametertype()
                self.state = 116
                self.match(decafParser.ID)
                self.state = 117
                self.match(decafParser.T__5)
                self.state = 118
                self.match(decafParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametertypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return decafParser.RULE_parametertype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametertype" ):
                listener.enterParametertype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametertype" ):
                listener.exitParametertype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametertype" ):
                return visitor.visitParametertype(self)
            else:
                return visitor.visitChildren(self)




    def parametertype(self):

        localctx = decafParser.ParametertypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parametertype)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(decafParser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.StatementContext)
            else:
                return self.getTypedRuleContext(decafParser.StatementContext,i)


        def getRuleIndex(self):
            return decafParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = decafParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(decafParser.T__2)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__7) | (1 << decafParser.T__8) | (1 << decafParser.T__9) | (1 << decafParser.T__10) | (1 << decafParser.T__11))) != 0):
                self.state = 125
                self.varDeclaration()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__2) | (1 << decafParser.T__4) | (1 << decafParser.T__12) | (1 << decafParser.T__14) | (1 << decafParser.T__16) | (1 << decafParser.T__17) | (1 << decafParser.T__20) | (1 << decafParser.T__21) | (1 << decafParser.T__34) | (1 << decafParser.T__35) | (1 << decafParser.NUM) | (1 << decafParser.ID) | (1 << decafParser.CHAR))) != 0):
                self.state = 131
                self.statement()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(decafParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return decafParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class WhilestmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.condition = None # BlockContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(decafParser.ExpressionContext,0)

        def block(self):
            return self.getTypedRuleContext(decafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhilestmt" ):
                listener.enterWhilestmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhilestmt" ):
                listener.exitWhilestmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhilestmt" ):
                return visitor.visitWhilestmt(self)
            else:
                return visitor.visitChildren(self)


    class IfstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.if_block = None # BlockContext
            self.else_block = None # BlockContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(decafParser.ExpressionContext,0)

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(decafParser.BlockContext)
            else:
                return self.getTypedRuleContext(decafParser.BlockContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstmt" ):
                listener.enterIfstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstmt" ):
                listener.exitIfstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstmt" ):
                return visitor.visitIfstmt(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(decafParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionstmt" ):
                listener.enterExpressionstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionstmt" ):
                listener.exitExpressionstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionstmt" ):
                return visitor.visitExpressionstmt(self)
            else:
                return visitor.visitChildren(self)


    class LocationstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.left = None # LocationContext
            self.right = None # ExpressionContext
            self.copyFrom(ctx)

        def location(self):
            return self.getTypedRuleContext(decafParser.LocationContext,0)

        def expression(self):
            return self.getTypedRuleContext(decafParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocationstmt" ):
                listener.enterLocationstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocationstmt" ):
                listener.exitLocationstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocationstmt" ):
                return visitor.visitLocationstmt(self)
            else:
                return visitor.visitChildren(self)


    class ReturnstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(decafParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnstmt" ):
                listener.enterReturnstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnstmt" ):
                listener.exitReturnstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnstmt" ):
                return visitor.visitReturnstmt(self)
            else:
                return visitor.visitChildren(self)


    class BlockstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(decafParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockstmt" ):
                listener.enterBlockstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockstmt" ):
                listener.exitBlockstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockstmt" ):
                return visitor.visitBlockstmt(self)
            else:
                return visitor.visitChildren(self)


    class MethodstmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a decafParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def methodCall(self):
            return self.getTypedRuleContext(decafParser.MethodCallContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodstmt" ):
                listener.enterMethodstmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodstmt" ):
                listener.exitMethodstmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodstmt" ):
                return visitor.visitMethodstmt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = decafParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                localctx = decafParser.IfstmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(decafParser.T__14)
                self.state = 140
                self.match(decafParser.T__12)
                self.state = 141
                self.expression(0)
                self.state = 142
                self.match(decafParser.T__13)
                self.state = 143
                localctx.if_block = self.block()
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==decafParser.T__15:
                    self.state = 144
                    self.match(decafParser.T__15)
                    self.state = 145
                    localctx.else_block = self.block()


                pass

            elif la_ == 2:
                localctx = decafParser.WhilestmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(decafParser.T__16)
                self.state = 149
                self.match(decafParser.T__12)
                self.state = 150
                self.expression(0)
                self.state = 151
                self.match(decafParser.T__13)
                self.state = 152
                localctx.condition = self.block()
                pass

            elif la_ == 3:
                localctx = decafParser.ReturnstmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 154
                self.match(decafParser.T__17)
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << decafParser.T__12) | (1 << decafParser.T__20) | (1 << decafParser.T__21) | (1 << decafParser.T__34) | (1 << decafParser.T__35) | (1 << decafParser.NUM) | (1 << decafParser.ID) | (1 << decafParser.CHAR))) != 0):
                    self.state = 155
                    self.expression(0)


